k8s/backend/03-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-management-deployment
  namespace: airline-backend-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-management
  template:
    metadata:
      labels:
        app: booking-management
    spec:
      containers:
      - name: booking-api
        image: nginx:alpine # Currently using nginx as a placeholder
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: booking-management-service
  namespace: airline-backend-prod
spec:
  selector:
    app: booking-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
