k8s/backend/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-api-ingress
  namespace: airline-backend-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.ghoshsourav21.in
    secretName: airline-api-tls
  rules:
  - host: api.ghoshsourav21.in
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: flight-search-service
            port:
              number: 80
      - path: /book
        pathType: Prefix
        backend:
          service:
            name: booking-management-service
            port:
              number: 80
